Complete Tests Coverage; Upload Fixes; Security Fixes; Nav Fixes; Refactoring

--- a/src/main/webapp/source/scripts/modules/upload/components/music-file-form.template.html
+++ b/src/main/webapp/source/scripts/modules/upload/components/music-file-form.template.html
@@ -1,6 +1,6 @@
 <form class="form-horizontal form-tab" novalidate>
     <legend></legend>
-    <div class="container">
+    <div class="col-xs-12">
         <div>
             <mll-file-selector formats="ctrl.formats" on-select-hdd="ctrl.selectHdd(fileInformation)"
                                on-select-dropbox="ctrl.selectDropbox(fileInformation)"></mll-file-selector>
