--- a/src/main/webapp/source/scripts/modules/header/components/header.template.html
+++ b/src/main/webapp/source/scripts/modules/header/components/header.template.html
@@ -9,7 +9,8 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" ng-href="ctrl.homeLink.href" title="{{ctrl.homeLink.text}}">
+                <a class="navbar-brand" ng-click="ctrl.home()" title="{{ctrl.homeLink.text}}"
+                   ng-show="ctrl.authService.details.isAuth">
                     <span class="glyphicon glyphicon-home" aria-hidden="true"></span>
                 </a>
             </div>
@@ -24,7 +25,14 @@
                     </li>
                 </ul>
 
-                {{ }}
+                <ul class="nav navbar-nav"
+                    ng-show="ctrl.authService.details.isAuth && ctrl.authService.details.data.permissions.upload">
+                    <li>
+                        <a ui-sref="{{ctrl.uploadLink.href}}">
+                            <span ng-bind="ctrl.uploadLink.text"></span>
+                        </a>
+                    </li>
+                </ul>
 
                 <ul class="nav navbar-nav navbar-right">
                     <li ng-show="!ctrl.authService.details.isAuth">
@@ -44,6 +52,5 @@
     </nav>
     <div class="container">
         <h1>Media Licensing Lab</h1>
-<p>  </p>
     </div>
 </header>
