--- a/src/main/webapp/source/scripts/modules/login/components/common-login-form.template.html
+++ b/src/main/webapp/source/scripts/modules/login/components/common-login-form.template.html
@@ -10,7 +10,7 @@
             <div class="col-xs-10 col-xs-offset-1">
                 <div class="input-group">
                     <span class="input-group-addon"><i class="fa fa-user fa-fw"></i></span>
-                    <input type="text" name="userName" class="form-control" placeholder="User Name..."
+                    <input type="text" name="userName" class="form-control" placeholder="User Name"
                            ng-model="ctrl.data.userName" required/>
                 </div>
 
@@ -31,7 +31,7 @@
                  <div class="input-group">
                      <span class="input-group-addon"><i class="fa fa-key fa-fw"></i></span>
                      <input type="password" name="password" class="form-control" id="login-password"
-                            ng-model="ctrl.data.password" placeholder="Password..." ng-minlength="8" required/>
+                            ng-model="ctrl.data.password" placeholder="Password" ng-minlength="8" required/>
                  </div>
                  <div class="alert alert-danger" role="alert"
                       ng-show="ctrl.loginForm.password.$invalid && ctrl.loginForm.$submitted">
