--- a/src/main/webapp/source/scripts/modules/upload/components/music-sound-information-form.template.html
+++ b/src/main/webapp/source/scripts/modules/upload/components/music-sound-information-form.template.html
@@ -104,7 +104,7 @@
 
     <div class="form-group">
         <div class="col-xs-3 col-lg-offset-6">
-            <button class="btn btn-block btn-default" ng-click="ctrl.reset()">Prrevious</button>
+            <button class="btn btn-block btn-default" ng-click="ctrl.reset()">Previous</button>
         </div>
         <div class="col-xs-3">
             <button class="btn btn-block btn-primary" ng-click="ctrl.submit()">Submit</button>
